--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.0",
+    "@zxing/browser": "^0.1.5",
     "date-fns": "^3.6.0",
+    "html5-qrcode": "^2.3.8",
     "next": "14.2.5",
     "qr-scanner": "^1.4.2",
     "react": "^18",
