--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.45.0",
     "@zxing/browser": "^0.1.5",
+    "ai-digest": "^1.0.5",
     "date-fns": "^3.6.0",
     "html5-qrcode": "^2.3.8",
     "next": "14.2.5",
